[gd_scene load_steps=2 format=2]

[ext_resource path="res://DeviceAuth.gd" type="Script" id=1]

[node name="DeviceAuth" type="Node2D"]
position = Vector2( 22.2704, 22.3283 )
script = ExtResource( 1 )

[node name="APIAccess" type="HTTPRequest" parent="."]

[node name="PollTimer" type="Timer" parent="."]

[node name="ExpiryTimer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 388.912
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 378.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 20.0
text = "Authenticate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_top = 3.0
margin_right = 118.0
margin_bottom = 17.0
text = "Idk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Link" type="LinkButton" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 378.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="APIAccess" to="." method="_on_api_access_request_completed"]
[connection signal="timeout" from="PollTimer" to="." method="_on_poll_timer_timeout"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_expiry_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_auth_pressed"]
[connection signal="pressed" from="VBoxContainer/Link" to="." method="_on_link_pressed"]
